# Lean-Graphics

./: README.md
tut_1/: example.glsl
tut_2/: CMakeLists.txt  Makefile  main.cpp
tut_2/assets/shaders/: simple.vert
tut_3/: CMakeLists.txt  Makefile  main.cpp
tut_3/assets/shaders/: simple.frag  simple.vert
tut_3/glad/include/glad/: glad.h
tut_4/: main.cpp
tut_4/assets/shaders/: simple.vert
tut_4/glad/src/: glad.c
